src += [
    files('adc_common_f47.c'),
    files('adc_common_v1.c'),
    files('adc_common_v1_multi.c'),
    files('crc_common_all.c'),
    files('crypto_common_f24.c'),
    files('dac_common_all.c'),
    files('dac_common_v1.c'),
    files('dcmi_common_f47.c'),
    files('desig_common_all.c'),
    files('desig_common_v1.c'),
    files('dma2d_common_f47.c'),
    files('dma_common_f24.c'),
    files('dsi_common_f47.c'),
    files('exti_common_all.c'),
    files('flash_common_all.c'),
    files('flash_common_f24.c'),
    files('flash_common_f.c'),
    files('flash_common_idcache.c'),
    files('fmc_common_f47.c'),
    files('gpio_common_all.c'),
    files('gpio_common_f0234.c'),
    files('hash_common_f24.c'),
    files('i2c_common_v1.c'),
    files('iwdg_common_all.c'),
    files('lptimer_common_all.c'),
    files('ltdc_common_f47.c'),
    files('pwr_common_v1.c'),
    files('quadspi_common_v1.c'),
    files('rcc_common_all.c'),
    files('rng_common_v1.c'),
    files('rtc_common_l1f024.c'),
    files('spi_common_all.c'),
    files('spi_common_v1.c'),
    files('spi_common_v1_frf.c'),
    files('timer_common_all.c'),
    files('timer_common_f0234.c'),
    files('timer_common_f24.c'),
    files('usart_common_all.c'),
    files('usart_common_f124.c'),
]
