src += files(
    'adc_common_f47.c',
    'adc_common_v1.c',
    'adc_common_v1_multi.c',
    'crc_common_all.c',
    'crypto_common_f24.c',
    'dac_common_all.c',
    'dac_common_v1.c',
    'dcmi_common_f47.c',
    'desig_common_all.c',
    'desig_common_v1.c',
    'dma2d_common_f47.c',
    'dma_common_f24.c',
    'dsi_common_f47.c',
    'exti_common_all.c',
    'flash_common_all.c',
    'flash_common_f24.c',
    'flash_common_f.c',
    'flash_common_idcache.c',
    'fmc_common_f47.c',
    'gpio_common_all.c',
    'gpio_common_f0234.c',
    'hash_common_f24.c',
    'i2c_common_v1.c',
    'iwdg_common_all.c',
    'lptimer_common_all.c',
    'ltdc_common_f47.c',
    'pwr_common_v1.c',
    'quadspi_common_v1.c',
    'rcc_common_all.c',
    'rng_common_v1.c',
    'rtc_common_l1f024.c',
    'spi_common_all.c',
    'spi_common_v1.c',
    'spi_common_v1_frf.c',
    'timer_common_all.c',
    'timer_common_f0234.c',
    'timer_common_f24.c',
    'usart_common_all.c',
    'usart_common_f124.c',
)
